--- a/services/comfy/Containerfile
+++ b/services/comfy/Containerfile
@@ -1,4 +1,4 @@
-FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-runtime
+FROM docker.io/pytorch/pytorch:2.2.2-cuda12.1-cudnn8-runtime
 
 ENV DEBIAN_FRONTEND=noninteractive PIP_PREFER_BINARY=1
 
@@ -6,11 +6,11 @@ RUN apt-get update && apt-get install -y git && apt-get clean
 
 ENV ROOT=/stable-diffusion
 RUN --mount=type=cache,target=/root/.cache/pip \
-  git clone https://github.com/comfyanonymous/ComfyUI.git ${ROOT} && \
-  cd ${ROOT} && \
-  git checkout master && \
-  git reset --hard d1f3637a5a944d0607b899babd8ff11d87100503 && \
-  pip install -r requirements.txt
+    git clone https://github.com/comfyanonymous/ComfyUI.git ${ROOT} && \
+    cd ${ROOT} && \
+    git checkout master && \
+    git reset --hard d1f3637a5a944d0607b899babd8ff11d87100503 && \
+    pip install -r requirements.txt
 
 WORKDIR ${ROOT}
 COPY . /docker/
