--- a/services/AUTOMATIC1111/Containerfile
+++ b/services/AUTOMATIC1111/Containerfile
@@ -1,4 +1,4 @@
-FROM docker.io/alpine/git:2.43.0 as download
+FROM docker.io/alpine/git:latest as download
 
 COPY clone.sh /clone.sh
 
@@ -15,7 +15,7 @@ RUN . /clone.sh clip-interrogator https://github.com/pharmapsychotic/clip-interr
 RUN . /clone.sh generative-models https://github.com/Stability-AI/generative-models 45c443b316737a4ab6e40413d7794a7f5657c19f
 
 
-FROM docker.io/pytorch/pytorch:2.1.2-cuda12.1-cudnn8-runtime
+FROM docker.io/pytorch/pytorch:2.4.0-cuda12.4-cudnn9-runtime
 
 ENV DEBIAN_FRONTEND=noninteractive PIP_PREFER_BINARY=1
 
