--- a/services/invoke/Containerfile
+++ b/services/invoke/Containerfile
@@ -1,9 +1,9 @@
-FROM docker.io/library/alpine:3.19 as xformers
+FROM docker.io/library/alpine:latest as xformers
 RUN apk add --no-cache aria2
 RUN aria2c -x 5 --dir / --out wheel.whl 'https://github.com/AbdBarho/stable-diffusion-webui-docker/releases/download/6.0.0/xformers-0.0.21.dev544-cp310-cp310-manylinux2014_x86_64-pytorch201.whl'
 
 
-FROM docker.io/pytorch/pytorch:2.2.2-cuda12.1-cudnn8-runtime
+FROM docker.io/pytorch/pytorch:2.4.0-cuda12.4-cudnn9-runtime
 
 ENV DEBIAN_FRONTEND=noninteractive PIP_EXISTS_ACTION=w PIP_PREFER_BINARY=1
 
@@ -44,9 +44,9 @@ COPY . /docker/
 
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV PYTHONUNBUFFERED=1 PRELOAD=false HF_HOME=/root/.cache/huggingface CONFIG_DIR=/data/config/invoke CLI_ARGS=""
-EXPOSE 7860
+EXPOSE 7861
 
 ENTRYPOINT ["/docker/entrypoint.sh"]
-CMD invokeai --web --host 0.0.0.0 --port 7860 --root_dir ${ROOT} --config ${CONFIG_DIR}/models.yaml \
+CMD invokeai --web --host 0.0.0.0 --port 7861 --root_dir ${ROOT} --config ${CONFIG_DIR}/models.yaml \
     --outdir /output/invoke --embedding_directory /data/embeddings/ --lora_directory /data/models/Lora \
     --no-nsfw_checker --no-safety_checker ${CLI_ARGS}
