--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,35 +1,33 @@
-version: '3.9'
+version: '3.8'
 
 x-base_service: &base_service
-    volumes:
-      - &v1 ./data:/data
-      - &v2 ./output:/output
-    stop_signal: SIGKILL
-    tty: true
-    devices:
-      - nvidia.com/gpu=all
-
-name: webui-podman
+  volumes:
+    - &v1 ./data:/data
+    - &v2 ./output:/output
+  stop_signal: SIGKILL
+  tty: true
+  devices:
+    - nvidia.com/gpu=all
 
 services:
   download:
     build: ./services/download/
-    profiles: ["download"]
+    profiles: [ "download" ]
     volumes:
       - *v1
 
-  auto: &automatic
+  auto:
     <<: *base_service
-    profiles: ["auto"]
+    profiles: [ "auto" ]
     build: ./services/AUTOMATIC1111
     environment:
       - CLI_ARGS=--allow-code --medvram --xformers --enable-insecure-extension-access --api
     ports:
       - "7860:7860"
 
-  invoke: &invoke
+  invoke:
     <<: *base_service
-    profiles: ["invoke"]
+    profiles: [ "invoke" ]
     build: ./services/invoke/
     environment:
       - PRELOAD=true
@@ -37,9 +35,9 @@ services:
     ports:
       - "7861:7861"
 
-  comfy: &comfy
+  comfy:
     <<: *base_service
-    profiles: ["comfy"]
+    profiles: [ "comfy" ]
     build: ./services/comfy/
     environment:
       - CLI_ARGS=
