--- a/services/invoke/Containerfile
+++ b/services/invoke/Containerfile
@@ -22,21 +22,21 @@ RUN git clone https://github.com/invoke-ai/InvokeAI.git ${ROOT}
 WORKDIR ${ROOT}
 
 RUN --mount=type=cache,target=/root/.cache/pip \
-    git reset --hard f3b2e02921927d9317255b1c3811f47bd40a2bf9 && \
+    git reset --hard && \
     pip install -e .
 
 
-ARG BRANCH=main SHA=f3b2e02921927d9317255b1c3811f47bd40a2bf9
+ARG BRANCH=main
 RUN --mount=type=cache,target=/root/.cache/pip \
     git fetch && \
     git reset --hard && \
     git checkout ${BRANCH} && \
-    git reset --hard ${SHA} && \
+    git reset --hard && \
     pip install -U -e .
 
 RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=bind,from=xformers,source=/wheel.whl,target=/xformers-0.0.21-cp310-cp310-linux_x86_64.whl \
-    pip install -U opencv-python-headless triton /xformers-0.0.21-cp310-cp310-linux_x86_64.whl && \
+    --mount=type=bind,from=xformers,source=/wheel.whl,target=/xformers-0.0.27-cp311-cp311-linux_x86_64.whl \
+    pip install -U opencv-python-headless triton /xformers-0.0.27-cp311-cp311-linux_x86_64.whl && \
     python3 -c "from patchmatch import patch_match"
 
 
